# esp32-a2dp-player

./: Cargo.toml  decode-backtrace  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md  state_machine.md
scripts/: flash.sh  run-wokwi.sh
src/: a2dp.rs  audio.rs  bluetooth_esp32.rs  bluetooth_esp32_a2dp.rs  bluetooth_gap_esp32.rs  bluetooth_gap_hal.rs  bluetooth_hal.rs  boot_state.rs  esp32.rs  main.rs  playback_state.rs  sd_card.rs  state_machine.rs  uuids.rs  wifi_connect_state.rs
