[package]
name = "esp32-a2dp-player"
version = "0.1.0"
authors = ["Erland Lewin <erland@lewin.nu>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-io = { git = "https://github.com/ivmarkov/embedded-io" }
embedded-svc = { version = "0.24", features = ["nightly", "experimental"] }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", branch = "master", features = [
    "binstart",
] }
#esp-idf-svc = { version = "~0.45" }
esp-idf-svc = { git = "https://github.com/pilotniq/esp-idf-svc", branch = "pilotniq-branches-a2dp", features = [
    "nightly",
] }
#esp-idf-hal = { version = "~0.40" }
esp-idf-hal = { git = "https://github.com/pilotniq/esp-idf-hal", branch = "piloting-esp-idf-sys" }
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
num-derive = "0.3"
futures-locks = "0.7"
sysinfo = "0.28"
# librespot-tremor = "0.2"
librespot-tremor = { git = "https://github.com/pilotniq/librespot-tremor", branch = "xtensa-cross-compile" }
event-listener = "2.5"
async-broadcast = "0.5"

[build-dependencies]
embuild = "0.31"
